@@ -61,6 +61,12 @@
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
     <ev_driverval>1</ev_driverval>
+    <constraints>
+     <constraint sense="false">
+      <driver>cdj550</driver>
+      <arg_defval>na</arg_defval>
+     </constraint>
+    </constraints>
    </enum_val>
    <enum_val id="ev/78-3">
     <ev_longname>
