@@ -1,5 +1,11 @@
 2009-05-09  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* opt/78.xml: Removed "Black and White" Color Mode (1 bit per pixel)
+	  from the "cdj550" driver. This mode is not supported by the driver
+	  (Ubuntu bug #337133).
+
+2009-05-09  Till Kamppeter <till.kamppeter@gmail.com>
+
 	* printer/Xerox-Phaser_3110.xml, driver/gdi.xml: Added the Xerox
 	  Phaser 3110 (Ubuntu bug #371737).
 	
